# ninja-example

./: .gitignore  CMakeLists.txt  Makefile  build.ninja  example.c  lib.cpp  lib.h
rust_foo/: Cargo.toml  rust_foo.h
rust_foo/src/: lib.rs
